--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@ body {
     padding-top: 60px; 
 }
 
+/* Navbar work starts here  */
+
 .nav-bar {
     display: flex;
     justify-content: space-between;
@@ -9,7 +11,7 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: rgba(215, 204, 204, 0.921); 
+    background-color: rgba(80, 78, 78, 0.921); 
     z-index: 1000; 
     border-bottom: 1px solid #e0e0e0; 
     padding: 10px;
@@ -26,11 +28,50 @@ body {
     color: aliceblue;
 }
 
+.nav-link:hover {
+    color: black;
+}
+
 .dropdown-item{
     color: white;
 }
 
 .dropdown-menu{
-    background-color: black;
+    background-color: rgba(80, 78, 78, 0.921);
     text-align: center;
+}
+
+/* Navbar work ends here  */
+
+
+/* Hero Section's work starts here  */
+
+.hero-sec{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    background-image: url("");
+    background-repeat: no-repeat;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.hero-sec > h1 {
+    padding-bottom: 90px;
+    padding-top: 0px;
+    margin-top: 0px;
+    font-weight: bolder;
+}
+
+.hero-sec > p {
+    padding-top: 0px;
+    padding-bottom: 40px;
+    margin-left: 170px;
+    margin-right: 170px;
+    margin-bottom: 0px;
+}
+
+.hero-sec > h3 {
+    color: rgba(236, 202, 31, 0.859);
+    font-weight: bold;
 }
