--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-body {
+/* body {
     padding-top: 60px; 
-}
+} */
 
 /* Navbar work starts here  */
 
@@ -11,9 +11,9 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: rgba(80, 78, 78, 0.921); 
+    /* background-color: rgba(173, 169, 169, 0.921);  */
     z-index: 1000; 
-    border-bottom: 1px solid #e0e0e0; 
+    /* border-bottom: 1px solid #e0e0e0;  */
     padding: 10px;
     color: white;
 }
@@ -51,9 +51,13 @@ body {
     flex-direction: column;
     align-items: center;
     justify-items: center;
-    background-image: url("");
+    background-image: url("./public/images/travel.jpg");
     background-repeat: no-repeat;
+    background-position: 100%;
+    background-size: cover;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 0px;
+    padding-top: 390px;
 }
 
 .hero-sec > h1 {
@@ -61,6 +65,7 @@ body {
     padding-top: 0px;
     margin-top: 0px;
     font-weight: bolder;
+    color: aliceblue;
 }
 
 .hero-sec > p {
@@ -69,9 +74,11 @@ body {
     margin-left: 170px;
     margin-right: 170px;
     margin-bottom: 0px;
+    color: aliceblue;
 }
 
 .hero-sec > h3 {
     color: rgba(236, 202, 31, 0.859);
     font-weight: bold;
+    margin-bottom: 30px;
 }
