--- a/src/App.css
+++ b/src/App.css
@@ -85,3 +85,11 @@
 
 
 /* Hero Section's work ends here  */
+
+
+/* Main Section's work starts here  */
+
+
+
+
+/* Main Section's work ends here  */
