footer section work starting

--- a/src/App.css
+++ b/src/App.css
@@ -78,7 +78,7 @@
 }
 
 .hero-sec > h3 {
-    color: rgba(236, 202, 31, 0.859);
+    color: yellow;
     font-weight: bold;
     margin-bottom: 30px;
 }
@@ -120,3 +120,9 @@
 }
 
 /* Main Section's work ends here  */
+
+
+/* Footer Section's work starts here  */
+
+
+/* Footer Section's work ends here  */
