--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,7 @@
     position:absolute;
     top: 0;
     width: 100%;
-    /* background-color: rgba(173, 169, 169, 0.921);  */
     z-index: 1000; 
-    /* border-bottom: 1px solid #e0e0e0;  */
     padding: 10px;
     color: white;
 }
@@ -123,6 +121,46 @@
 
 
 /* Footer Section's work starts here  */
+
+.footer{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-around;
+    width: 100%;
+    background-color: chocolate;
+    margin-top: 2px;
+}
+
+.footer-img{
+    height: 60px;
+    width: 60px;
+    object-fit: cover;
+    padding: 20px;
+}
+
+.footer-linking{
+    display: flex;
+    flex-direction: row;
+}
+
+.footer-list{
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    list-style-type: none;
+}
+
+.footer-list .list-item a {
+    text-decoration: none; 
+    color: white;
+    padding: 20px;
+}
+
+.footer-right{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding: 10px;
+    font-size: 14px;
+}
 
 
 /* Footer Section's work ends here  */
