--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@
     flex-direction: column;
     align-items: center;
     justify-items: center;
-    background-image: url("./public/images/travel.jpg");
+    background-image: url("./public/images/travel.webp");
     background-repeat: no-repeat;
     background-position: 100%;
     background-size: cover;
